--- a/CleanCode/CleanCode.UnitTests/CleanCode.UnitTests.csproj
+++ b/CleanCode/CleanCode.UnitTests/CleanCode.UnitTests.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="CancelReservationTests.cs" />
     <Compile Include="Comments.Tests\CommentsTests.cs" />
+    <Compile Include="DuplicatedCode.Tests\TimeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SwitchStatements\MonthlyStatementTests.cs" />
   </ItemGroup>
